--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 
+
 <head>
     <meta charset="utf-8">
-    <title>tabmenu 과제</title>
-    <link rel="stylesheet" href="tabmenu.css">
+    <title>.</title>
+    <style>
+        body { margin: 0;}
+        .box {width: 320px; height: 100px; background-color: #000;}
+        
+        .half {width: 160px;}
+    </style>
 </head>
 
 <body>
-   <ul class="tab">
-       <li><a href="http://www.coupang.com/np/products/96243100#explanation-detail">상품 설명</a></li>
-       <li><a href="http://www.coupang.com/np/products/96243100#about-detail">상품 문의</a></li>
-       <li><a href="http://www.coupang.com/np/products/96243100#back-detail">쉬운 반품</a></li>
-       <li><a href="http://www.coupang.com/np/products/96243100#essential-detail">상품 필수 표기정보</a></li>
-   </ul>
+    <div class="box"></div>
+    <div class="box half"></div>
 </body>
