--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>.</title>
     <style>
         body { margin: 0;}
-        .box {width: 320px; height: 100px; background-color: #000;}
+        .box {width: 100%; height: 100px; background-color: #000;}
         
         .half {width: 160px;}
     </style>
 </head>
 
-<body>
-    <div class="box"></div>
+<body onclick="alert(document.body.clientwidth);">
+    
+    <div class="box" onclick="alert(this.offsetWidth);"></div>
     <div class="box half"></div>
 </body>
